--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
   "devDependencies": {
     "electron": "^4.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "class-utils": "^0.3.6"
+  }
 }
