--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,10 @@ cache:
 
 package:
   stage: build
+  variable: 
+    VERSION_ID: '1.0.$CI_PIPELINE_ID'
   script:
-  - sed "s/1.0.0/1.0.${$CI_PIPELINE_ID}/g" package.json > _package.json && mv _package.json package.json
+  - sed "s/1.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
   - npm i && npm run build
   artifacts:
     paths:
