--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ cache:
 
 package:
   stage: build
-  variable: 
+  variables: 
     VERSION_ID: '1.0.$CI_PIPELINE_ID'
   script:
   - sed "s/1.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
