--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,13 @@ image: node:latest
 cache:
   paths:
   - node_modules/
+  - .yarn
+
+# https://yarnpkg.com/lang/en/docs/install-ci/
+before_script:
+  # Install yarn as outlined in (https://yarnpkg.com/lang/en/docs/install/#alternatives-stable)
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - yarn install
 
 package:
   stage: build
@@ -15,7 +22,7 @@ package:
     VERSION_ID: '1.0.$CI_PIPELINE_ID'
   script:
   - sed "s/1.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
-  - npm i && npm run build
+  - npm run build
   artifacts:
     paths:
       - $CI_PROJECT_DIR/dist/*.*
