--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,19 +10,19 @@ cache:
     - node_modules/
     - .yarn
 
-build:
+package:
     stage: build
     variables: 
         VERSION_ID: '1.0.$CI_PIPELINE_ID'
     # https://yarnpkg.com/lang/en/docs/install-ci/
     before_script:
-    # Install yarn as outlined in (https://yarnpkg.com/lang/en/docs/install/#alternatives-stable)
-    - curl -o- -L https://yarnpkg.com/install.sh | bash
-    - yarn install
+        # Install yarn as outlined in (https://yarnpkg.com/lang/en/docs/install/#alternatives-stable)
+        - curl -o- -L https://yarnpkg.com/install.sh | bash
+        - yarn install
     script:
     - sed "s/1.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
     - npm run build
     artifacts:
         paths:
-          - $CI_PROJECT_DIR/dist/*.*
-        when: manual
+            - $CI_PROJECT_DIR/dist/*.*
+    when: manual
