--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,4 +25,6 @@ package:
     artifacts:
         paths:
             - $CI_PROJECT_DIR/dist/*.*
-    when: manual
+    only:
+        - tags
+        - web
