--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "class-utils": "^0.3.6",
-    "node-notifier": "^5.4.0"
+    "node-notifier": "^5.4.0",
+    "vue": "^2.6.10"
   }
 }
