--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
-    "pack": "node build.js --dir",
-    "dist": "node build.js",
+    "pack": "node scripts/build.js --dir",
+    "dist": "node scripts/build.js",
     "postinstall": "node scripts/postinstall.js"
   },
   "repository": "git@gitlab.com:ZatsuneNoMokou/streamlink-electron.git",
