--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A toolbox Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron .",
+    "start": "electron .",
     "pack": "node scripts/build.js --dir",
     "dist": "node scripts/build.js",
     "postinstall": "node scripts/postinstall.js"
@@ -21,7 +21,6 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
-    "cross-env": "^5.2.0",
     "electron": "^5.0.0",
     "electron-builder": "^20.39.0",
     "yargs": "^13.2.2"
