--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ztoolbox",
-  "version": "1.0.0",
+  "version": "0.0.42",
   "description": "A toolbox Electron application",
   "main": "main.js",
   "scripts": {
@@ -27,7 +27,11 @@
   },
   "dependencies": {
     "class-utils": "^0.3.6",
+    "codemirror": "^5.46.0",
+    "fs-extra": "^7.0.1",
     "node-notifier": "^5.4.0",
+    "string-strip-html": "^4.0.12",
+    "vm2": "^3.8.1",
     "vue": "^2.6.10"
   }
 }
