--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
+    "del": "^4.1.1",
     "electron": "^5.0.0",
     "electron-builder": "^20.39.0",
     "gulp": "^4.0.2",
