--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron": "^5.0.0",
     "electron-builder": "^20.39.0",
     "gulp": "^4.0.2",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "yargs": "^13.2.2"
