--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "email": "contact@zatsunenomokou.eu",
     "url": "https://zatsunenomokou.eu/"
   },
-  "license": "CC0-1.0",
+  "license": "GPL-3.0-or-later",
   "devDependencies": {
     "del": "^4.1.1",
     "electron": "^5.0.0",
