--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "class-utils": "^0.3.6",
     "codemirror": "^5.46.0",
     "fs-extra": "^7.0.1",
+    "glob": "^7.1.4",
     "node-notifier": "^5.4.0",
+    "remove-accents": "^0.4.2",
     "string-strip-html": "^4.0.12",
     "vm2": "^3.8.1",
     "vue": "^2.6.10"
