--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "codemirror": "^5.46.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.4",
+    "lodash": "^4.17.11",
     "node-notifier": "^5.4.0",
     "remove-accents": "^0.4.2",
     "string-strip-html": "^4.0.12",
