--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "^5.0.1",
+    "typescript": "^3.4.5",
     "yargs": "^13.2.2"
   },
   "dependencies": {
