--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 dist
 browserViews/lib
 browserViews/*.html
-browserViews/css/*.css
-browserViews/css/*.map
-browserViews/js/*.js
-browserViews/js/*.map
+browserViews/css/**/*.css
+browserViews/css/**/*.map
+browserViews/js/**/*.js
+**/*.map
+/*.js
+!/gulpfile.js
 
 
 
@@ -15,7 +17,6 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
@@ -28,9 +29,6 @@ node_modules/
 
 # Optional eslint cache
 .eslintcache
-
-# Yarn Integrity file
-.yarn-integrity
 
 # dotenv environment variables file
 .env
