continue moving from js to ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
-	"noImplicitAny": true,
-	"target": "esNext"
+	"compilerOptions": {
+		"module": "commonjs",
+		"types": ["node"],
+		"noImplicitAny": true,
+		"target": "esNext"
+	}
 }
