--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
+    "plugin-error": "^1.0.1",
+    "pug": "^2.0.3",
+    "through2": "^3.0.1",
     "typescript": "^3.4.5",
+    "umd": "^3.0.3",
+    "vue-template-compiler": "^2.6.10",
+    "vue-template-es2015-compiler": "^1.9.1",
     "yargs": "^13.2.2"
   },
   "dependencies": {
