--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 dist
 browserViews/lib
 browserViews/*.html
-browserViews/vue/*.js
+browserViews/*.js
 browserViews/css/**/*.css
 browserViews/js/**/*.js
 **/*.map
