update to electron 16, browserView js in module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,12 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"pretty": true,
-		"types": ["node"],
+		"types": [
+			"node"
+		],
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"skipLibCheck": true,
-		"target": "esNext"
+		"target": "ESNext"
 	}
 }
