--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A toolbox Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "gulp --require ts-node/register",
-    "pack": "gulp build --require ts-node/register && ts-node scripts/build.js --dir",
-    "dist": "gulp build --require ts-node/register && ts-node scripts/build.js",
-    "postinstall": "ts-node scripts/postinstall.ts"
+    "start": "NODE_OPTIONS=\"--enable-source-maps\" electron .",
+    "start-win": "set NODE_OPTIONS=\"--enable-source-maps\" && electron .",
+    "build": "tsc --project tsconfig-scripts.json && gulp",
+    "pack": "tsc --project tsconfig-scripts.json && gulp build && node scripts/build.js --dir",
+    "dist": "tsc --project tsconfig-scripts.json && gulp build && node scripts/build.js",
+    "postinstall": "tsc --project tsconfig-scripts.json && node scripts/postinstall.js"
   },
   "repository": "git@gitlab.com:ZatsuneNoMokou/streamlink-electron.git",
   "keywords": [
@@ -33,9 +34,10 @@
     "@types/yargs": "^17.0.3",
     "cross-fetch": "^3.1.4",
     "del": "^4.1.1",
-    "electron": "^5.0.0",
-    "electron-builder": "^20.39.0",
+    "electron": "^15.0.0",
+    "electron-builder": "^22.11.7",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
@@ -56,7 +58,7 @@
     "fs-extra": "^10.0.0",
     "muicss": "^0.10.3",
     "node-notifier": "^10.0.0",
-    "string-strip-html": "^4.0.12",
+    "string-strip-html": "^9.0.2",
     "vm2": "^3.8.1",
     "vue": "^2.6.14"
   }
