--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "email": "contact@zatsunenomokou.eu",
     "url": "https://zatsunenomokou.eu/"
   },
+  "os": [
+    "linux",
+    "win32"
+  ],
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
@@ -31,6 +35,7 @@
     "@types/node-notifier": "^8.0.1",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
+    "@types/ws": "^8.2.0",
     "@types/yargs": "^17.0.3",
     "cross-fetch": "^3.1.4",
     "del": "^4.1.1",
@@ -53,6 +58,7 @@
     "yargs": "^17.2.0"
   },
   "dependencies": {
+    "@josephuspaye/chrome-native-bridge": "^0.3.0",
     "class-utils": "^0.3.6",
     "codemirror": "^5.46.0",
     "fs-extra": "^10.0.0",
@@ -60,6 +66,7 @@
     "node-notifier": "^10.0.0",
     "string-strip-html": "^9.0.2",
     "vm2": "^3.8.1",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "ws": "^8.2.2"
   }
 }
