add mustache for custom theme, remove muicss, rework ipc invokes, add i18next

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-sourcemaps": "^0.0.35",
     "@types/node": "^16.10.0",
+    "@types/mustache": "^4.1.2",
     "@types/node-notifier": "^8.0.1",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
@@ -62,7 +63,8 @@
     "class-utils": "^0.3.6",
     "codemirror": "^5.46.0",
     "fs-extra": "^10.0.0",
-    "muicss": "^0.10.3",
+    "i18next": "^21.1.0",
+    "mustache": "^4.2.0",
     "node-notifier": "^10.0.0",
     "string-strip-html": "^9.0.2",
     "vm2": "^3.8.1",
