--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"pretty": true,
+		"resolveJsonModule": true,
 		"types": [
 			"node"
 		],
