enforce null/undefined, setting conf modif, wip settings browerView

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 		],
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
+		"strictNullChecks": true,
 		"skipLibCheck": true,
 		"target": "ESNext"
 	}
