--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig",
 	"compilerOptions": {
 		"alwaysStrict": true,
 		"declaration": true,
+		"downlevelIteration": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": false,
 		"forceConsistentCasingInFileNames": true,
@@ -11,7 +13,8 @@
 		"pretty": true,
 		"resolveJsonModule": true,
 		"types": [
-			"node"
+			"node",
+			"codemirror"
 		],
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
