--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ cache:
 
 package:
     stage: build
+    timeout: 30m
     variables: 
         VERSION_ID: '1.0.$CI_PIPELINE_ID'
     before_script:
