--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-sourcemaps": "^0.0.35",
-    "@types/node": "^16.10.0",
     "@types/mustache": "^4.1.2",
+    "@types/node": "^16.10.0",
     "@types/node-notifier": "^8.0.1",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
@@ -66,6 +66,7 @@
     "i18next": "^21.1.0",
     "mustache": "^4.2.0",
     "node-notifier": "^10.0.0",
+    "simple-git": "^2.46.0",
     "string-strip-html": "^9.0.2",
     "vm2": "^3.8.1",
     "vue": "^2.6.14",
