--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		"noImplicitReturns": true,
 		"strictNullChecks": true,
 		"skipLibCheck": true,
-		"target": "ESNext"
+		"target": "ESNext",
+		"rootDir": "."
 	}
 }
