--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-sourcemaps": "^0.0.35",
     "@types/mustache": "^4.1.2",
-    "@types/node": "^16.10.0",
+    "@types/node": "^16.11.0",
     "@types/node-notifier": "^8.0.1",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
@@ -62,6 +62,8 @@
     "@josephuspaye/chrome-native-bridge": "^0.3.0",
     "class-utils": "^0.3.6",
     "codemirror": "^5.60.0",
+    "cron-parser": "^4.1.0",
+    "esm": "^3.2.25",
     "fs-extra": "^10.0.0",
     "i18next": "^21.1.0",
     "mustache": "^4.2.0",
