--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@types/auto-launch": "^5.0.2",
     "@types/codemirror": "^5.60.3",
     "@types/dotenv": "^8.2.0",
     "@types/fs-extra": "^9.0.13",
@@ -61,6 +62,7 @@
   },
   "dependencies": {
     "@josephuspaye/chrome-native-bridge": "^0.3.0",
+    "auto-launch": "^5.0.5",
     "class-utils": "^0.3.6",
     "codemirror": "^5.60.0",
     "cron-parser": "^4.1.0",
@@ -70,6 +72,7 @@
     "i18next": "^21.1.0",
     "mustache": "^4.2.0",
     "node-notifier": "^10.0.0",
+    "protocol-registry": "^1.3.10",
     "regedit": "^5.0.0",
     "simple-git": "^2.46.0",
     "string-strip-html": "^9.0.2",
