--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node-notifier": "^8.0.1",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
+    "@types/winreg": "^1.2.31",
     "@types/ws": "^8.2.0",
     "@types/yargs": "^17.0.3",
     "cross-fetch": "^3.1.4",
@@ -73,11 +74,11 @@
     "mustache": "^4.2.0",
     "node-notifier": "^10.0.0",
     "protocol-registry": "^1.3.10",
-    "regedit": "^5.0.0",
     "simple-git": "^2.46.0",
     "string-strip-html": "^9.0.2",
     "vm2": "^3.8.1",
     "vue": "^2.6.14",
+    "winreg": "^1.2.4",
     "ws": "^8.2.2"
   }
 }
