--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.0",
     "@types/node-notifier": "^8.0.1",
+    "@types/shelljs": "^0.8.9",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
     "@types/winreg": "^1.2.31",
