--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "mustache": "^4.2.0",
     "node-notifier": "^10.0.0",
     "protocol-registry": "^1.3.10",
+    "shelljs": "^0.8.4",
     "simple-git": "^2.46.0",
     "string-strip-html": "^9.0.2",
     "vm2": "^3.8.1",
