--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.0",
     "@types/node-notifier": "^8.0.1",
+    "@types/sass": "^1.43.1",
     "@types/shelljs": "^0.8.9",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
@@ -53,8 +54,8 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
-    "node-sass": "^6.0.1",
     "pug": "^2.0.3",
+    "sass": "^1.43.5",
     "through2": "^3.0.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
