--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-sourcemaps": "^0.0.35",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.0",
     "@types/node-notifier": "^8.0.1",
@@ -73,6 +74,7 @@
     "esm": "^3.2.25",
     "fs-extra": "^10.0.0",
     "i18next": "^21.1.0",
+    "lodash.debounce": "^4.0.8",
     "mustache": "^4.2.0",
     "node-notifier": "^10.0.0",
     "protocol-registry": "^1.3.10",
