--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "ztoolbox",
   "version": "0.1.0",
   "description": "A toolbox Electron application",
+  "packageManager": "yarn@3.2.0",
   "main": "main.js",
   "scripts": {
-    "start": "NODE_OPTIONS=\"--enable-source-maps\" electron .",
-    "start-win": "set NODE_OPTIONS=\"--enable-source-maps\" && electron .",
-    "build": "tsc --project tsconfig-scripts.json && gulp",
-    "pack": "tsc --project tsconfig-scripts.json && gulp build && node scripts/build.js --dir",
-    "dist": "tsc --project tsconfig-scripts.json && gulp build && node scripts/build.js",
+    "start": "NODE_OPTIONS=\"--enable-source-maps\" yarn electron .",
+    "start-win": "set NODE_OPTIONS=\"--enable-source-maps\" && yarn electron .",
+    "build": "tsc --project tsconfig-scripts.json && yarn gulp",
+    "pack": "tsc --project tsconfig-scripts.json && yarn gulp build && yarn node scripts/build.js --dir",
+    "dist": "tsc --project tsconfig-scripts.json && yarn gulp build && yarn node scripts/build.js",
     "postinstall": "tsc --project tsconfig-scripts.json && node scripts/postinstall.js"
   },
   "repository": "git@gitlab.com:ZatsuneNoMokou/streamlink-electron.git",
@@ -29,7 +30,6 @@
   "devDependencies": {
     "@types/auto-launch": "^5.0.2",
     "@types/codemirror": "^5.60.3",
-    "@types/dotenv": "^8.2.0",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
@@ -37,7 +37,6 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.0",
-    "@types/node-notifier": "^8.0.1",
     "@types/sass": "^1.43.1",
     "@types/shelljs": "^0.8.9",
     "@types/through2": "^2.0.36",
@@ -76,7 +75,6 @@
     "i18next": "^21.1.0",
     "lodash.debounce": "^4.0.8",
     "mustache": "^4.2.0",
-    "node-notifier": "^10.0.0",
     "protocol-registry": "^1.3.10",
     "shelljs": "^0.8.4",
     "simple-git": "^2.46.0",
@@ -85,5 +83,8 @@
     "vue": "^2.6.14",
     "winreg": "^1.2.4",
     "ws": "^8.2.2"
+  },
+  "resolution": {
+    "**/chokidar": ">=3.0.0"
   }
 }
