--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/auto-launch": "^5.0.2",
+    "@types/browserify": "^12.0.37",
     "@types/codemirror": "^5.60.3",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-sourcemaps": "^0.0.35",
+    "@types/locutus": "^0.0.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.11.0",
@@ -58,7 +60,7 @@
     "sass": "^1.43.5",
     "through2": "^3.0.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
+    "typescript": "~4.4.3",
     "vue-template-compiler": "^2.6.14",
     "vue-template-es2015-compiler": "^1.9.1",
     "yargs": "^17.2.0"
@@ -66,6 +68,7 @@
   "dependencies": {
     "@josephuspaye/chrome-native-bridge": "^0.3.0",
     "auto-launch": "^5.0.5",
+    "browserify": "^17.0.0",
     "class-utils": "^0.3.6",
     "codemirror": "^5.60.0",
     "cron-parser": "^4.1.0",
@@ -73,6 +76,7 @@
     "esm": "^3.2.25",
     "fs-extra": "^10.0.0",
     "i18next": "^21.1.0",
+    "locutus": "^2.0.16",
     "lodash.debounce": "^4.0.8",
     "mustache": "^4.2.0",
     "protocol-registry": "^1.3.10",
