--- a/package.json
+++ b/package.json
@@ -30,40 +30,41 @@
   "devDependencies": {
     "@types/auto-launch": "^5.0.2",
     "@types/browserify": "^12.0.37",
-    "@types/codemirror": "^5.60.3",
+    "@types/codemirror": "^5.60.5",
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-sourcemaps": "^0.0.35",
     "@types/locutus": "^0.0.6",
     "@types/lodash.debounce": "^4.0.6",
-    "@types/mustache": "^4.1.2",
-    "@types/node": "^16.11.0",
+    "@types/mustache": "^4.2.1",
+    "@types/node": "^18.11.7",
+    "@types/pug": "^2.0.6",
     "@types/sass": "^1.43.1",
-    "@types/shelljs": "^0.8.9",
+    "@types/shelljs": "^0.8.11",
     "@types/through2": "^2.0.36",
     "@types/umd": "^3.0.1",
     "@types/winreg": "^1.2.31",
-    "@types/ws": "^8.2.0",
-    "@types/yargs": "^17.0.3",
-    "cross-fetch": "^3.1.4",
+    "@types/ws": "^8.5.3",
+    "@types/yargs": "^17.0.13",
+    "cross-fetch": "^3.1.5",
     "del": "^4.1.1",
-    "electron": "^17.1.1",
-    "electron-builder": "^22.11.7",
+    "electron": "^21.2.0",
+    "electron-builder": "^23.6.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "gulp-pug": "^4.0.1",
-    "gulp-sass": "^5.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
-    "pug": "^2.0.3",
-    "sass": "^1.43.5",
-    "through2": "^3.0.1",
-    "ts-node": "^10.2.1",
+    "pug": "^3.0.2",
+    "sass": "^1.55.0",
+    "through2": "^4.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "~4.4.3",
-    "vue-template-compiler": "^2.6.14",
+    "vue-template-compiler": "^2.7.13",
     "vue-template-es2015-compiler": "^1.9.1",
-    "yargs": "^17.2.0"
+    "yargs": "^17.6.0"
   },
   "dependencies": {
     "@josephuspaye/chrome-native-bridge": "^0.3.0",
@@ -71,22 +72,22 @@
     "browserify": "^17.0.0",
     "class-utils": "^0.3.6",
     "codemirror": "^5.60.0",
-    "cron-parser": "^4.1.0",
-    "dotenv": "^10.0.0",
+    "cron-parser": "^4.6.0",
+    "dotenv": "^16.0.3",
     "esm": "^3.2.25",
-    "fs-extra": "^10.0.0",
-    "i18next": "^21.1.0",
+    "fs-extra": "^10.1.0",
+    "i18next": "^22.0.3",
     "locutus": "^2.0.16",
     "lodash.debounce": "^4.0.8",
     "mustache": "^4.2.0",
-    "protocol-registry": "^1.3.10",
-    "shelljs": "^0.8.4",
-    "simple-git": "^2.46.0",
-    "string-strip-html": "^9.0.2",
-    "vm2": "^3.8.1",
-    "vue": "^2.6.14",
+    "protocol-registry": "^1.3.16",
+    "shelljs": "^0.8.5",
+    "simple-git": "^3.14.1",
+    "string-strip-html": "^11.6.17",
+    "vm2": "^3.9.11",
+    "vue": "^2.7.13",
     "winreg": "^1.2.4",
-    "ws": "^8.2.2"
+    "ws": "^8.10.0"
   },
   "resolution": {
     "**/chokidar": ">=3.0.0"
