--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "protocol-registry": "^1.3.16",
     "shelljs": "^0.8.5",
     "simple-git": "^3.14.1",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "string-strip-html": "^11.6.17",
     "vm2": "^3.9.11",
     "vue": "^2.7.13",
