--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
     "pug": "^3.0.2",
-    "sass": "^1.55.0",
+    "sass-embedded": "^1.55.0",
     "through2": "^4.0.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.4.3",
