--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "ztoolbox",
   "version": "0.1.0",
   "description": "A toolbox Electron application",
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.2.4",
   "main": "main.js",
   "scripts": {
     "start": "NODE_OPTIONS=\"--enable-source-maps\" yarn electron .",
     "start-win": "set NODE_OPTIONS=\"--enable-source-maps\" && yarn electron .",
-    "build": "tsc --project tsconfig-scripts.json && yarn gulp",
-    "pack": "tsc --project tsconfig-scripts.json && yarn gulp build && yarn node scripts/build.js --dir",
-    "dist": "tsc --project tsconfig-scripts.json && yarn gulp build && yarn node scripts/build.js",
+    "pre-build": "tsc --project tsconfig-scripts.json",
+    "build": "yarn pre-build && yarn gulp",
+    "pack": "yarn pre-build && yarn gulp build && yarn node scripts/build.js --dir",
+    "dist": "yarn pre-build && yarn gulp build && yarn node scripts/build.js",
     "postinstall": "tsc --project tsconfig-scripts.json && node scripts/postinstall.js"
   },
   "repository": "git@gitlab.com:ZatsuneNoMokou/streamlink-electron.git",
@@ -34,7 +35,6 @@
     "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
-    "@types/gulp-sourcemaps": "^0.0.35",
     "@types/locutus": "^0.0.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/mustache": "^4.2.1",
@@ -55,13 +55,11 @@
     "gulp-cli": "^2.3.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^5.0.1",
     "pug": "^3.0.2",
     "sass-embedded": "^1.55.0",
     "through2": "^4.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "~4.4.3",
+    "typescript": "~4.8.4",
     "vue-template-compiler": "^2.7.13",
     "vue-template-es2015-compiler": "^1.9.1",
     "yargs": "^17.6.0"
