es6 modules compilation/support

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "A toolbox Electron application",
   "packageManager": "yarn@3.2.4",
-  "main": "main.js",
+  "main": "index.cjs",
+  "module": "main.js",
+  "type": "module",
   "scripts": {
     "start": "NODE_OPTIONS=\"--enable-source-maps\" yarn electron .",
     "start-win": "set NODE_OPTIONS=\"--enable-source-maps\" && yarn electron .",
@@ -73,7 +75,7 @@
     "codemirror": "^5.60.0",
     "cron-parser": "^4.6.0",
     "dotenv": "^16.0.3",
-    "esm-wallaby": "^3.2.26",
+    "esm": "npm:esm-wallaby@^3.2.26",
     "fs-extra": "^10.1.0",
     "i18next": "^22.0.3",
     "locutus": "^2.0.16",
