--- a/tsconfig-scripts.json
+++ b/tsconfig-scripts.json
@@ -2,12 +2,12 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "ESNext",
 		"sourceMap": true
 	},
 	"files": [],
 	"include": [
-		"./gulpfile.ts",
+		"./gulpfile.esm.ts",
 		"./chrome_messaging/*.ts",
 		"./scripts/*.ts"
 	],
