--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"compilerOptions": {
 		"alwaysStrict": true,
-		"declaration": true,
+		"declaration": false,
 		"downlevelIteration": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": false,
