--- a/package.json
+++ b/package.json
@@ -86,11 +86,12 @@
     "simple-git": "^3.14.1",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
-    "string-strip-html": "^11.6.17",
+    "string-strip-html": "^12.0.0",
     "vm2": "^3.9.11",
     "vue": "^2.7.13",
     "winreg": "^1.2.4",
-    "ws": "^8.10.0"
+    "ws": "^8.10.0",
+    "yaml": "^2.1.3"
   },
   "resolution": {
     "**/chokidar": ">=3.0.0"
