--- a/tsconfig-nomodule.json
+++ b/tsconfig-nomodule.json
@@ -1,17 +1,16 @@
 {
-	"$schema": "https://json.schemastore.org/tsconfig",
 	"compilerOptions": {
 		"alwaysStrict": true,
 		"declaration": false,
 		"downlevelIteration": true,
-		"esModuleInterop": true,
+		"esModuleInterop": false,
 		"experimentalDecorators": false,
 		"forceConsistentCasingInFileNames": true,
 		"newLine": "LF",
-		"module": "ESNext",
+		"module": "none",
 		"moduleResolution": "node",
 		"pretty": true,
-		"resolveJsonModule": true,
+		"resolveJsonModule": false,
 		"types": [
 			"node",
 			"browserify",
@@ -28,15 +27,13 @@
 		"target": "ESNext",
 		"rootDir": "."
 	},
+	"files": [
+		"./browserViews/js/_fix_exports.ts",
+		"./browserViews/js/_import-map-loader.ts"
+	],
 	"include": [
-		"./main.ts",
-		"./browserViews/js/**/*.ts",
-		"./chrome_messaging/**/*.ts",
-		"./classes/**/*.ts",
-		"./locales/**/*.json"
 	],
 	"exclude": [
-		"./browserViews/js/**/_fix_exports.ts",
-		"./browserViews/js/**/_import-map-loader.ts"
+		"**/*.ts"
 	]
 }
