--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "i18next": "^22.0.3",
     "locutus": "^2.0.16",
     "lodash.debounce": "^4.0.8",
-    "mustache": "^4.2.0",
     "protocol-registry": "^1.3.16",
     "shelljs": "^0.8.5",
     "simple-git": "^3.14.1",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "string-strip-html": "^12.0.0",
+    "twing": "^5.1.2",
     "vm2": "^3.9.11",
     "vue": "^2.7.13",
     "winreg": "^1.2.4",
