--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/mustache": "^4.2.1",
     "@types/node": "^18.11.7",
+    "@types/nunjucks": "^3",
     "@types/pug": "^2.0.6",
     "@types/sass": "^1.43.1",
     "@types/shelljs": "^0.8.11",
@@ -76,13 +77,13 @@
     "i18next": "^22.0.3",
     "locutus": "^2.0.16",
     "lodash.debounce": "^4.0.8",
+    "nunjucks": "^3.2.4",
     "protocol-registry": "^1.3.16",
     "shelljs": "^0.8.5",
     "simple-git": "^3.19.1",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "string-strip-html": "^12.0.0",
-    "twing": "^5.1.2",
     "vm2": "^3.9.19",
     "winreg": "^1.2.4",
     "ws": "^8.10.0",
