--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,27 @@
 root = true
 
 [*]
-charset = utf-8
 end_of_line = lf
-indent_size = 4
+insert_final_newline = true
+charset = utf-8
 indent_style = tab
-insert_final_newline = false
-max_line_length = 120
-tab_width = 4
+indent_size = 4
+trim_trailing_whitespace = true
 
-[*.json]
+[{*.njk,*.twig}]
+ij_smart_tabs = true
+ij_twig_keep_indents_on_empty_lines = false
+ij_twig_spaces_inside_comments_delimiters = true
+ij_twig_spaces_inside_delimiters = true
+ij_twig_spaces_inside_variable_delimiters = true
+
+[{*.ts,*.js}]
+ij_smart_tabs = true
+ij_typescript_force_semicolon_style = true
+ij_typescript_space_before_for_semicolon = false
+ij_typescript_use_double_quotes = true
+ij_typescript_use_explicit_js_extension = true
+ij_typescript_use_semicolon_after_statement = true
+
+[*.{json,yml}]
 indent_style = space
