--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "A toolbox Electron application",
   "packageManager": "yarn@4.0.2",
-  "main": "index.mjs",
+  "main": "main.js",
   "type": "module",
   "scripts": {
     "start": "NODE_OPTIONS=\"--enable-source-maps\" yarn electron .",
@@ -30,36 +30,35 @@
   ],
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@types/auto-launch": "^5.0.2",
-    "@types/browserify": "^12.0.37",
-    "@types/codemirror": "^5.60.8",
-    "@types/fs-extra": "^11.0.1",
-    "@types/gulp": "^4.0.13",
-    "@types/gulp-sass": "^5.0.1",
-    "@types/locutus": "^0.0.6",
-    "@types/lodash.debounce": "^4.0.7",
-    "@types/mustache": "^4.2.2",
-    "@types/node": "^18.17.0",
-    "@types/nunjucks": "^3.2.3",
-    "@types/pug": "^2.0.6",
+    "@types/auto-launch": "^5.0.5",
+    "@types/browserify": "^12.0.40",
+    "@types/codemirror": "^5.60.15",
+    "@types/fs-extra": "^11.0.4",
+    "@types/gulp": "^4.0.17",
+    "@types/gulp-sass": "^5.0.4",
+    "@types/locutus": "^0.0.8",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/mustache": "^4.2.5",
+    "@types/node": "^20.11.24",
+    "@types/nunjucks": "^3.2.6",
+    "@types/pug": "^2.0.10",
     "@types/sass": "^1.45.0",
-    "@types/shelljs": "^0.8.12",
-    "@types/umd": "^3.0.1",
-    "@types/winreg": "^1.2.32",
-    "@types/ws": "^8.5.5",
-    "@types/yargs": "^17.0.24",
-    "cross-fetch": "^4.0.0",
-    "del": "^7.0.0",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
+    "@types/shelljs": "^0.8.15",
+    "@types/umd": "^3.0.4",
+    "@types/winreg": "^1.2.36",
+    "@types/ws": "^8.5.10",
+    "@types/yargs": "^17.0.32",
+    "del": "^7.1.0",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.13.3",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "pug": "^3.0.2",
-    "sass-embedded": "^1.64.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.1.6",
+    "sass-embedded": "^1.71.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3",
     "yargs": "^17.7.2"
   },
   "dependencies": {
@@ -69,24 +68,24 @@
     "browserify": "^17.0.0",
     "class-utils": "^0.3.6",
     "codemirror": "^5.60.0",
-    "cron-parser": "^4.8.1",
-    "dotenv": "^16.3.1",
+    "cron-parser": "^4.9.0",
+    "dotenv": "^16.4.5",
     "esm": "npm:esm-wallaby@^3.2.26",
-    "fs-extra": "^11.1.1",
-    "i18next": "^23.2.11",
+    "fs-extra": "^11.2.0",
+    "i18next": "^23.10.0",
     "json5": "^2.2.3",
     "locutus": "^2.0.16",
     "lodash.debounce": "^4.0.8",
     "nunjucks": "^3.2.4",
-    "protocol-registry": "^1.4.0",
+    "protocol-registry": "^1.4.1",
     "shelljs": "^0.8.5",
-    "simple-git": "^3.19.1",
-    "socket.io": "^4.7.1",
-    "socket.io-client": "^4.7.1",
-    "string-strip-html": "^13.4.2",
-    "winreg": "^1.2.4",
-    "ws": "^8.13.0",
-    "yaml": "^2.3.1"
+    "simple-git": "^3.22.0",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "string-strip-html": "^13.4.6",
+    "winreg": "^1.2.5",
+    "ws": "^8.16.0",
+    "yaml": "^2.4.0"
   },
   "resolution": {
     "**/chokidar": ">=3.0.0"
