code tester - now use flem

--- a/package.json
+++ b/package.json
@@ -62,19 +62,20 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
+    "@fastify/static": "^6.12.0",
     "@fontsource/ubuntu": "^5.0.5",
     "@josephuspaye/chrome-native-bridge": "^0.3.0",
     "auto-launch": "^5.0.6",
     "browserify": "^17.0.0",
     "class-utils": "^0.3.6",
-    "codemirror": "^5.60.0",
     "cron-parser": "^4.9.0",
     "dotenv": "^16.4.5",
     "esm": "npm:esm-wallaby@^3.2.26",
+    "fastify": "^4.26.2",
+    "flems": "^1.5.10",
     "fs-extra": "^11.2.0",
     "i18next": "^23.10.0",
     "json5": "^2.2.3",
-    "locutus": "^2.0.16",
     "lodash.debounce": "^4.0.8",
     "nunjucks": "^3.2.4",
     "protocol-registry": "^1.4.1",
