dragdrop open urls files

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/gulp": "^4.0.17",
     "@types/gulp-sass": "^5.0.4",
+    "@types/ini": "^4",
     "@types/locutus": "^0.0.8",
     "@types/lodash.debounce": "^4.0.9",
     "@types/mustache": "^4.2.5",
@@ -75,6 +76,7 @@
     "flems": "^1.5.10",
     "fs-extra": "^11.2.0",
     "i18next": "^23.10.0",
+    "ini": "^4.1.2",
     "json5": "^2.2.3",
     "lodash.debounce": "^4.0.8",
     "nunjucks": "^3.2.4",
