--- a/tsconfig-scripts.json
+++ b/tsconfig-scripts.json
@@ -2,7 +2,7 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"module": "ESNext",
+		"module": "Node16",
 		"sourceMap": true
 	},
 	"files": [],
