--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "start-win": "set NODE_OPTIONS=\"--enable-source-maps\" && yarn electron .",
     "pre-build": "tsc --project tsconfig-scripts.json",
     "build": "yarn pre-build && yarn gulp",
-    "pack": "yarn pre-build && yarn gulp build && yarn node scripts/build.js --dir",
+    "pack": "yarn pre-build && yarn gulp build && DO_PACK=1 yarn node scripts/build.js",
     "dist": "yarn pre-build && yarn gulp build && yarn node scripts/build.js",
     "postinstall": "tsc --project tsconfig-scripts.json && node scripts/postinstall.js"
   },
   "repository": "git@github.com:ZatsuneNoMokou/ztoolbox-app.git",
   "keywords": [
-    "Electron",
-    "streamlink"
+    "Electron"
   ],
   "author": {
-    "name": "ZatsuneNoMokou",
-    "email": "contact@zatsunenomokou.eu",
-    "url": "https://zatsunenomokou.eu/"
+    "name": "Zatsune Sakurako",
+    "url": "https://linktr.ee/zatsune_sakurako"
   },
   "os": [
     "linux",
@@ -31,56 +29,46 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/auto-launch": "^5.0.5",
-    "@types/browserify": "^12.0.40",
-    "@types/codemirror": "^5.60.15",
-    "@types/fs-extra": "^11.0.4",
     "@types/gulp": "^4.0.17",
     "@types/gulp-sass": "^5.0.4",
     "@types/ini": "^4.1.1",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/mustache": "^4.2.5",
     "@types/node": "^22.15.29",
     "@types/nunjucks": "^3.2.6",
     "@types/pug": "^2.0.10",
     "@types/sass": "^1.45.0",
     "@types/shelljs": "^0.8.15",
-    "@types/umd": "^3.0.4",
     "@types/ws": "^8.18.0",
-    "@types/yargs": "^17.0.33",
     "del": "^8.0.0",
-    "electron": "^36.3.2",
+    "electron": "^37.2.1",
     "electron-builder": "^26.0.12",
-    "gulp": "^5.0.0",
-    "gulp-cli": "^3.0.0",
+    "gulp": "^5.0.1",
+    "gulp-cli": "^3.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^6.0.1",
     "pug": "^3.0.3",
-    "sass-embedded": "^1.86.0",
+    "sass-embedded": "^1.89.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.3",
-    "yargs": "^17.7.2"
+    "typescript": "~5.7.3"
   },
   "dependencies": {
-    "@fastify/static": "^8.1.1",
-    "@fontsource/ubuntu": "^5.2.5",
+    "@fastify/static": "^8.2.0",
+    "@fontsource/ubuntu": "^5.2.6",
     "auto-launch": "^5.0.6",
-    "browserify": "^17.0.1",
-    "cron-parser": "^4.9.0",
-    "fastify": "^5.3.2",
+    "cron-parser": "^5.3.0",
+    "fastify": "^5.4.0",
     "flems": "^1.5.10",
-    "fs-extra": "^11.3.0",
     "i18next": "^25.1.2",
     "ini": "^5.0.0",
     "json5": "^2.2.3",
     "lodash.debounce": "^4.0.8",
-    "material-symbols": "^0.31.4",
+    "material-symbols": "^0.32.0",
     "nunjucks": "^3.2.4",
     "protocol-registry": "^2.0.0",
-    "shelljs": "^0.9.2",
-    "simple-git": "^3.27.0",
+    "shelljs": "^0.10.0",
+    "simple-git": "^3.28.0",
     "socket.io": "^4.8.1",
-    "string-strip-html": "^13.4.12",
     "ws": "^8.18.1",
-    "yaml": "^2.7.0"
+    "yaml": "^2.8.0"
   }
 }
