--- a/package.json
+++ b/package.json
@@ -33,23 +33,22 @@
     "@types/gulp-sass": "^5.0.4",
     "@types/ini": "^4.1.1",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^22.15.29",
+    "@types/node": "^22.17.0",
     "@types/nunjucks": "^3.2.6",
     "@types/pug": "^2.0.10",
     "@types/sass": "^1.45.0",
-    "@types/shelljs": "^0.8.15",
-    "@types/ws": "^8.18.0",
+    "@types/shelljs": "^0.8.17",
+    "@types/ws": "^8.18.1",
     "del": "^8.0.0",
-    "electron": "^37.2.1",
-    "electron-builder": "^26.0.12",
+    "electron": "^37.2.5",
+    "electron-builder": "26.0.19",
     "gulp": "^5.0.1",
     "gulp-cli": "^3.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^6.0.1",
     "pug": "^3.0.3",
     "sass-embedded": "^1.89.2",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.7.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@fastify/static": "^8.2.0",
@@ -57,18 +56,18 @@
     "auto-launch": "^5.0.6",
     "cron-parser": "^5.3.0",
     "fastify": "^5.4.0",
-    "i18next": "^25.1.2",
+    "i18next": "^25.3.2",
     "ini": "^5.0.0",
     "jimp": "^1.6.0",
     "json5": "^2.2.3",
     "lodash.debounce": "^4.0.8",
-    "material-symbols": "^0.32.0",
+    "material-symbols": "^0.33.0",
     "nunjucks": "^3.2.4",
     "protocol-registry": "^2.0.0",
     "shelljs": "^0.10.0",
     "simple-git": "^3.28.0",
     "socket.io": "^4.8.1",
-    "ws": "^8.18.1",
+    "ws": "^8.18.3",
     "yaml": "^2.8.0"
   }
 }
