--- a/package.json
+++ b/package.json
@@ -53,12 +53,15 @@
   "dependencies": {
     "@fastify/static": "^8.2.0",
     "@fontsource/ubuntu": "^5.2.6",
+    "@jimp/core": "^1.6.0",
+    "@jimp/js-png": "^1.6.0",
+    "@jimp/plugin-print": "^1.6.0",
+    "@jimp/plugin-resize": "^1.6.0",
     "auto-launch": "^5.0.6",
     "cron-parser": "^5.3.0",
     "fastify": "^5.4.0",
     "i18next": "^25.3.2",
     "ini": "^5.0.0",
-    "jimp": "^1.6.0",
     "json5": "^2.2.3",
     "lodash.debounce": "^4.0.8",
     "material-symbols": "^0.33.0",
