--- a/package.json
+++ b/package.json
@@ -28,47 +28,47 @@
   ],
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@types/gulp": "^4.0.17",
-    "@types/gulp-sass": "^5.0.4",
+    "@types/gulp": "^4.0.18",
+    "@types/gulp-sass": "^6.0.0",
     "@types/ini": "^4.1.1",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^22.17.0",
+    "@types/node": "^24.9.2",
     "@types/nunjucks": "^3.2.6",
     "@types/pug": "^2.0.10",
     "@types/sass": "^1.45.0",
     "@types/shelljs": "^0.8.17",
     "@types/ws": "^8.18.1",
-    "del": "^8.0.0",
-    "electron": "^37.2.5",
-    "electron-builder": "26.0.19",
+    "del": "^8.0.1",
+    "electron": "^39.0.0",
+    "electron-builder": "^26.1.0",
     "gulp": "^5.0.1",
     "gulp-cli": "^3.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^6.0.1",
     "pug": "^3.0.3",
-    "sass-embedded": "^1.89.2",
-    "typescript": "^5.9.2"
+    "sass-embedded": "^1.93.3",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@fastify/static": "^8.2.0",
-    "@fontsource/ubuntu": "^5.2.6",
+    "@fastify/static": "^8.3.0",
+    "@fontsource/ubuntu": "^5.2.8",
     "@jimp/core": "^1.6.0",
     "@jimp/js-png": "^1.6.0",
     "@jimp/plugin-print": "^1.6.0",
     "@jimp/plugin-resize": "^1.6.0",
-    "cron-parser": "^5.3.0",
-    "fastify": "^5.4.0",
-    "i18next": "^25.3.2",
-    "ini": "^5.0.0",
+    "cron-parser": "^5.4.0",
+    "fastify": "^5.6.1",
+    "i18next": "^25.6.0",
+    "ini": "^6.0.0",
     "json5": "^2.2.3",
     "lodash.debounce": "^4.0.8",
-    "material-symbols": "^0.33.0",
+    "material-symbols": "^0.39.1",
     "nunjucks": "^3.2.4",
     "protocol-registry": "^2.0.0",
     "shelljs": "^0.10.0",
-    "simple-git": "^3.28.0",
+    "simple-git": "^3.30.0",
     "socket.io": "^4.8.1",
     "ws": "^8.18.3",
-    "yaml": "^2.8.0"
+    "yaml": "^2.8.1"
   }
 }
